# Winlator-Ludashi-Console

./: .gitignore  CONTRIBUTING.md  CREDITS.md  DELTA_CHASSIS.md  LICENSE  NOTICE  README.md  settings.gradle
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  console-ci.yml
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fexcore_env_vars.json
app/src/main/assets/box64/: box64-0.4.2.tzst
app/src/main/assets/graphics_driver/: adrenotools-turnip26.2.0.tzst
app/src/main/assets/wowbox64/: wowbox64-0.4.2.tzst
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/winlator/: VulkanRendererContext.cpp  VulkanRendererContext.h  fakeinput.cpp  gpu_image.c  process_helper.c  vulkan.c  vulkan_jni.cpp  window_postfx.frag  window_sgsr.frag  window_stretch.frag  winlauncher.c
app/src/main/java/com/winlator/cmod/: AdrenotoolsFragment.java  ContainerDetailFragment.java  ContainersFragment.java  ContentsFragment.java  ControlsEditorActivity.java  ExternalControllerBindingsActivity.java  FileManagerFragment.java  InputControlsFragment.java  MainActivity.java  SettingsFragment.java  ShortcutsFragment.java  XServerDisplayActivity.java
app/src/main/java/com/winlator/cmod/box64/: Box64EditPresetDialog.java
app/src/main/java/com/winlator/cmod/console/: ConsoleAboutScreen.kt  ConsoleChassisScreen.kt  ConsoleContainerEditorScreen.kt  ConsoleContainersScreen.kt  ConsoleControls.kt  ConsoleControlsScreen.kt  ConsoleGestures.kt  ConsoleHomeFragment.kt  ConsoleHomeScreen.kt  ConsoleMotion.kt  ConsoleScaffold.kt  ConsoleScroll.kt  ConsoleSessionMenu.kt  ConsoleSettingsScreen.kt  ConsoleShortcutsScreen.kt  ConsoleSystemMenu.kt  ConsoleTheme.kt  ConsoleWindowChrome.kt  EasySetup.kt  GameFileBrowser.kt  SessionLogBuffer.kt  SessionMenuController.kt  ShortcutImporter.kt
app/src/main/res/drawable/: adrenotools_card_background.xml  bordered_panel.xml  bordered_panel_dark.xml  checkbox_checked.xml  checkbox_sidebar.xml  checkbox_unchecked.xml  combo_box_no_arrow_dark.xml  container_detail_card.xml  container_detail_card_dark.xml  delta_game_screen_frame.xml  dialog_background_dark_blue.xml  driver_card_background.xml  field_action_button.xml  ic_internal_storage.xml  ic_picture_in_picture_alt.xml  ic_sidebar_controls.xml  ic_sidebar_dpad.xml  ic_sidebar_effects.xml  ic_sidebar_gpu.xml  ic_sidebar_keyboard.xml  ic_sidebar_logs.xml  ic_sidebar_performance.xml  ic_sidebar_power.xml  ic_sidebar_task_manager.xml  ic_sidebar_tools.xml  ic_sidebar_vibration.xml  icon_arrow_right.xml  icon_audio.xml  icon_exit.xml  icon_fullscreen.xml  icon_input_controls.xml  icon_keyboard.xml  icon_logs.xml  icon_magnifier.xml  icon_menu_container.xml  icon_menu_contents.xml  icon_menu_file_manager.xml  icon_menu_gpu.xml  icon_mouse.xml  icon_pause.xml  (+27 more)
app/src/main/res/layout/: adrenotools_dashboard_item.xml  adrenotools_fragment.xml  adrenotools_list_item.xml  container_detail_fragment.xml  container_list_item.xml  containers_fragment.xml  content_dialog.xml  control_element_settings.xml  controls_editor_activity.xml  cpu_list_dialog.xml  dialog_list_item_amoled.xml  download_progress_dialog.xml  dxvk_config_dialog.xml  file_manager_fragment.xml  graphics_driver_config_dialog.xml  left_sidebar.xml  main_activity.xml  main_menu_header.xml  main_menu_storage_footer.xml  preloader_dialog.xml  process_info_list_item.xml  proton_options_dialog.xml  renderer_options_dialog.xml  settings_fragment.xml  shortcut_settings_dialog.xml  spinner_dropdown_item_amoled.xml  spinner_dropdown_item_amoled_compact.xml  spinner_item_amoled.xml  wined3d_config_dialog.xml  xserver_display_activity.xml
app/src/main/res/menu/: main_menu.xml  xserver_menu.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  styles.xml
(+91 files in other folders)
